# vertex-pipelines-end-to-end-samples

./: Makefile  README.md  env.sh.example
cloudbuild/: package-release.yaml
cloudfunction/src/: main.py  requirements.txt
docs/: 01_run_pipeline.md  02_create_component_or_pipeline.md  03_custom_python_package.md
documentation/: Infrastructure.md
package/: pyproject.toml
package/src/package/: __init__.py  gcp_utils.py
package/tests/: test_gcp_utils.py
pipelines/src/pipelines/: prediction.py  training.py
pipelines/src/pipelines/utils/: create_pipeline_trigger.py  upload_pipeline.py
terraform/envs/dev/: main.tf  variables.tf
terraform/modules/vertex_deployment/: iam.tf  main.tf  outputs.tf  variables.tf
utils/: increment_toml_version.py  pyproject.toml  update_toml_version.py
